--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <nav class="menu">
         <a class="btn primary" href="./cliente/">Abrir demo — Vista Cliente</a>
         <a class="btn" href="./camarero/">Abrir demo — Panel Camarero</a>
-        <a class="btn" href="./camarero/dossier-pagoyo.pdf">Ver dossier comercial (PDF)</a>
+        <a class="btn" href="/pagoyo-demo/dossier-pagoyo.pdf">Ver dossier comercial (PDF)</a>
 
       </nav>
       <p class="hint">Sugerencia: guarda esta página en favoritos en tu tablet/móvil.</p>
