--- a/cliente/index.html
+++ b/cliente/index.html
@@ -6,6 +6,7 @@
   <title>PagoYo — Vista Cliente</title>
   <style>
     :root { --teal:#0F766E; --orange:#E67E22; --bg:#F4F6F8; }
+    *{box-sizing:border-box}
     body{margin:0;font-family:system-ui,Arial,sans-serif;background:var(--bg);color:#111;}
     header{background:var(--teal);color:#fff;padding:14px;text-align:center;font-size:20px;font-weight:600;}
     main{max-width:700px;margin:auto;padding:20px;}
@@ -14,9 +15,25 @@
     li{display:flex;justify-content:space-between;padding:10px 8px;margin-bottom:6px;background:#fff;border-radius:10px;box-shadow:0 1px 4px rgba(0,0,0,.06);}
     .total{display:flex;justify-content:space-between;margin-top:16px;padding:12px;background:#fff;border-radius:10px;font-weight:700;color:#0F766E;}
     .btn{margin-top:20px;display:block;width:100%;background:var(--orange);color:#fff;font-weight:600;padding:14px;border:none;border-radius:12px;font-size:16px;cursor:pointer;}
-    .btn:hover{opacity:.9;}
+    .btn:hover{opacity:.95}
     footer{text-align:center;margin-top:20px;}
-    a{color:var(--teal);text-decoration:none;font-weight:600;}
+    a{color:var(--teal);text-decoration:none;font-weight:600}
+
+    /* Modal simple */
+    .overlay{position:fixed;inset:0;background:rgba(0,0,0,.35);display:none;align-items:center;justify-content:center;padding:18px;}
+    .modal{width:min(520px,92vw);background:#fff;border-radius:14px;box-shadow:0 20px 60px rgba(0,0,0,.25);padding:18px;border:1px solid rgba(15,118,110,.15)}
+    .modal h3{margin:0 0 10px;color:#0F766E}
+    .options{display:grid;grid-template-columns:1fr 1fr;gap:10px;margin-top:10px}
+    .opt{border:1.5px solid #e5e7eb;border-radius:12px;padding:12px;text-align:center;font-weight:700;cursor:pointer;background:#fafafa}
+    .opt:hover{border-color:#0F766E}
+    .opt.cash{background:#fff8ee}
+    .opt.card{background:#eff6ff}
+    .close{margin-top:12px;display:block;width:100%;background:#111;color:#fff;border:none;border-radius:10px;padding:10px;cursor:pointer}
+
+    /* Resumen final */
+    .done{display:none;margin-top:16px;padding:14px;background:#ecfdf5;border:1px solid #86efac;border-radius:12px}
+    .small{color:#444;font-size:14px;margin-top:6px}
+    .ref{font-weight:800;color:#0F766E}
   </style>
 </head>
 <body>
@@ -33,8 +50,69 @@
     <div class="total">
       <span>Total Mesa</span><span>69,90 €</span>
     </div>
-    <button class="btn">Confirmar mi parte</button>
+
+    <button id="confirmBtn" class="btn">Confirmar mi parte</button>
+
+    <div id="doneBox" class="done">
+      ✔ Tu parte está lista. Método: <span id="methodTxt" class="ref">—</span><br/>
+      <span class="small">Enseña este código si te lo piden: <span id="refCode" class="ref"></span></span>
+    </div>
+
     <footer><p><a href="../">⬅ Volver al inicio</a></p></footer>
   </main>
+
+  <!-- Modal -->
+  <div id="overlay" class="overlay" role="dialog" aria-modal="true" aria-hidden="true">
+    <div class="modal">
+      <h3>Elige método de pago</h3>
+      <div class="options">
+        <div class="opt cash" data-method="Efectivo">💵 Efectivo</div>
+        <div class="opt card" data-method="Tarjeta">💳 Tarjeta</div>
+      </div>
+      <button id="closeBtn" class="close">Cancelar</button>
+    </div>
+  </div>
+
+  <script>
+    const $ = s => document.querySelector(s);
+    const overlay = $("#overlay");
+    const confirmBtn = $("#confirmBtn");
+    const closeBtn = $("#closeBtn");
+    const doneBox = $("#doneBox");
+    const methodTxt = $("#methodTxt");
+    const refCode = $("#refCode");
+
+    confirmBtn.addEventListener("click", () => {
+      overlay.style.display = "flex";
+      overlay.setAttribute("aria-hidden","false");
+    });
+
+    closeBtn.addEventListener("click", () => {
+      overlay.style.display = "none";
+      overlay.setAttribute("aria-hidden","true");
+    });
+
+    overlay.addEventListener("click", (e) => {
+      if(e.target === overlay) closeBtn.click();
+    });
+
+    document.querySelectorAll(".opt").forEach(el=>{
+      el.addEventListener("click", ()=>{
+        const method = el.getAttribute("data-method");
+        // Genera un código de referencia simple, visual para la demo
+        const code = "M6-" + Math.random().toString(36).slice(2,6).toUpperCase();
+        methodTxt.textContent = method;
+        refCode.textContent = code;
+
+        // Muestra resumen
+        doneBox.style.display = "block";
+        confirmBtn.textContent = "Parte confirmada";
+        confirmBtn.disabled = true;
+
+        // Cierra modal
+        closeBtn.click();
+      });
+    });
+  </script>
 </body>
 </html>
