--- a/camarero/index.html
+++ b/camarero/index.html
@@ -43,9 +43,9 @@
     <section class="card">
       <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
         <h3 style="margin:0;color:#0F766E">Pagos</h3>
-        <span class="badge card-badge">Pendientes: 2</span>
+        <span id="pendingCount" class="badge card-badge">Pendientes: 2</span>
       </div>
-      <div class="list">
+      <div id="paymentsList" class="list">
         <div class="row">
           <div class="left">
             <span class="id">Parcial #A1 • 18,50 €</span>
@@ -77,5 +77,37 @@
 
     <footer><p><a href="../">⬅ Volver al inicio</a></p></footer>
   </main>
+
+  <script>
+    const paymentsList = document.getElementById('paymentsList');
+    const pendingCount = document.getElementById('pendingCount');
+    let pending = 2; // contador demo inicial
+
+    function addPendingRow({code, amount, items, method}) {
+      const badgeClass = method === 'Efectivo' ? 'cash' : 'cardm';
+      const row = document.createElement('div');
+      row.className = 'row';
+      row.innerHTML = `
+        <div class="left">
+          <span class="id">Parcial #${code} • ${amount}</span>
+          <span class="items">${items}</span>
+        </div>
+        <span class="badge ${badgeClass}">${method}</span>
+        <button class="btn">Marcar cobrado</button>
+      `;
+      paymentsList.prepend(row);
+      pending++;
+      pendingCount.textContent = 'Pendientes: ' + pending;
+    }
+
+    // Escucha desde la otra pestaña (Cliente)
+    const ch = new BroadcastChannel('pagoyo_demo');
+    ch.onmessage = (e) => {
+      const data = e.data || {};
+      if (data.type === 'partial_confirmed') {
+        addPendingRow(data);
+      }
+    };
+  </script>
 </body>
 </html>
