--- a/camarero/index.html
+++ b/camarero/index.html
@@ -34,12 +34,12 @@
 <body>
   <header>Mesa 6 — Panel Camarero</header>
   <main class="grid">
-    <section class="totals">
-      <div class="card"><div class="label">Total TPV</div><div class="value">69,90 €</div></div>
-      <div class="card"><div class="label">Total asignado</div><div class="value">45,70 €</div></div>
-      <div class="card"><div class="label">Pendiente</div><div class="value" style="color:#ef4444">24,20 €</div></div>
-    </section>
-
+   <section class="totals">
+  <div class="card"><div class="label">Total TPV</div><div id="tpvTotal" class="value">69,90 €</div></div>
+  <div class="card"><div class="label">Total asignado</div><div id="assignedTotal" class="value">45,70 €</div></div>
+  <div class="card"><div class="label">Pendiente</div><div id="pendingTotal" class="value" style="color:#ef4444">24,20 €</div></div>
+</section>
+ 
     <section class="card">
       <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
         <h3 style="margin:0;color:#0F766E">Pagos</h3>
