--- a/camarero/index.html
+++ b/camarero/index.html
@@ -78,10 +78,53 @@
     <footer><p><a href="../">⬅ Volver al inicio</a></p></footer>
   </main>
 
- <script>
-  const paymentsList = document.getElementById('paymentsList');
-  const pendingCount = document.getElementById('pendingCount');
-  let pending = 2; // contador demo inicial
+<script>
+  // Utils € ↔ número
+  const euroToNum = (s) => parseFloat(
+    s.replace(/\./g,'').replace(',', '.').replace(/[^\d.]/g,'')
+  ) || 0;
+  const numToEuro = (n) => n.toFixed(2).replace('.', ',') + ' €';
+
+  // Elementos
+  const paymentsList  = document.getElementById('paymentsList');
+  const pendingCount  = document.getElementById('pendingCount');
+  const tpvEl         = document.getElementById('tpvTotal');
+  const assignedEl    = document.getElementById('assignedTotal');
+  const pendingEl     = document.getElementById('pendingTotal');
+
+  // Estados iniciales desde el DOM
+  let totalTPV      = euroToNum(tpvEl.textContent);        // 69,90
+  let totalAssigned = euroToNum(assignedEl.textContent);   // 45,70
+  let totalPending  = euroToNum(pendingEl.textContent);    // 24,20
+
+  // Contador de pendientes real (botones no deshabilitados)
+  let pending = document.querySelectorAll('.row .btn:not([disabled])').length;
+  pendingCount.textContent = 'Pendientes: ' + pending;
+
+  function refreshTotals() {
+    assignedEl.textContent = numToEuro(totalAssigned);
+    totalPending = Math.max(0, totalTPV - totalAssigned);
+    pendingEl.textContent  = numToEuro(totalPending);
+    // rojo si hay pendiente, verde si todo listo
+    pendingEl.style.color  = totalPending > 0 ? '#ef4444' : '#16a34a';
+  }
+
+  function attachButton(btn) {
+    btn.addEventListener("click", () => {
+      // Cambia a cobrado
+      btn.disabled = true;
+      btn.textContent = "Cobrado";
+      btn.previousElementSibling.className = "badge paid";
+      btn.previousElementSibling.textContent = "Cobrado";
+      // Baja contador de pendientes
+      pending = Math.max(0, pending - 1);
+      pendingCount.textContent = 'Pendientes: ' + pending;
+      // (Totales NO cambian aquí: ya cambiaron al confirmar en Cliente)
+    });
+  }
+
+  // Conectar botones existentes
+  document.querySelectorAll(".row .btn").forEach(attachButton);
 
   function addPendingRow({code, amount, items, method}) {
     const badgeClass = method === 'Efectivo' ? 'cash' : 'cardm';
@@ -96,32 +139,23 @@
       <button class="btn">Marcar cobrado</button>
     `;
     paymentsList.prepend(row);
+    // Sube contador de pendientes
     pending++;
     pendingCount.textContent = 'Pendientes: ' + pending;
+    // Sube Asignado y baja Pendiente en totales
+    const add = euroToNum(amount);
+    totalAssigned = Math.min(totalTPV, totalAssigned + add);
+    refreshTotals();
+    // Activar botón
     attachButton(row.querySelector(".btn"));
   }
 
-  // Manejador de "Marcar cobrado"
-  function attachButton(btn) {
-    btn.addEventListener("click", () => {
-      btn.disabled = true;
-      btn.textContent = "Cobrado";
-      btn.previousElementSibling.className = "badge paid";
-      btn.previousElementSibling.textContent = "Cobrado";
-      pending = Math.max(0, pending - 1);
-      pendingCount.textContent = 'Pendientes: ' + pending;
-    });
-  }
-
-  // Conectar todos los botones iniciales
-  document.querySelectorAll(".btn").forEach(attachButton);
-
-  // Escucha desde la otra pestaña (Cliente)
+  // Escucha al Cliente (misma tablet, otra pestaña)
   const ch = new BroadcastChannel('pagoyo_demo');
   ch.onmessage = (e) => {
     const data = e.data || {};
     if (data.type === 'partial_confirmed') addPendingRow(data);
   };
 </script>
- </body>
+  </body>
 </html>
