--- a/camarero/index.html
+++ b/camarero/index.html
@@ -32,13 +32,13 @@
   </style>
 </head>
 <body>
-  <header>Mesa 6 — Panel Camarero</header>
-  <main class="grid">
-   <section class="totals">
-  <div class="card"><div class="label">Total TPV</div><div id="tpvTotal" class="value">69,90 €</div></div>
-  <div class="card"><div class="label">Total asignado</div><div id="assignedTotal" class="value">45,70 €</div></div>
-  <div class="card"><div class="label">Pendiente</div><div id="pendingTotal" class="value" style="color:#ef4444">24,20 €</div></div>
-</section>
+ <header>
+  <div style="display:flex;align-items:center;justify-content:space-between;gap:8px;max-width:900px;margin:0 auto;">
+    <span>Mesa 6 — Panel Camarero</span>
+    <button id="resetBtn" class="btn" style="background:#111;border-radius:10px;padding:8px 12px">Reset demo</button>
+  </div>
+</header>
+ </section>
  
     <section class="card">
       <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
