--- a/camarero/index.html
+++ b/camarero/index.html
@@ -79,53 +79,69 @@
   </main>
 
 <script>
-  // Utils € ↔ número
-  const euroToNum = (s) => parseFloat(
-    s.replace(/\./g,'').replace(',', '.').replace(/[^\d.]/g,'')
-  ) || 0;
+  // --- Utils € ↔ número
+  const euroToNum = (s) =>
+    parseFloat(s.replace(/\./g,'').replace(',', '.').replace(/[^\d.]/g,'')) || 0;
   const numToEuro = (n) => n.toFixed(2).replace('.', ',') + ' €';
 
-  // Elementos
+  // --- Elementos
   const paymentsList  = document.getElementById('paymentsList');
   const pendingCount  = document.getElementById('pendingCount');
   const tpvEl         = document.getElementById('tpvTotal');
   const assignedEl    = document.getElementById('assignedTotal');
   const pendingEl     = document.getElementById('pendingTotal');
+  const resetBtn      = document.getElementById('resetBtn');
 
-  // Estados iniciales desde el DOM
-  let totalTPV      = euroToNum(tpvEl.textContent);        // 69,90
-  let totalAssigned = euroToNum(assignedEl.textContent);   // 45,70
-  let totalPending  = euroToNum(pendingEl.textContent);    // 24,20
+  // --- Estados iniciales (leídos del DOM)
+  const initial = {
+    tpv:      euroToNum(tpvEl.textContent),       // 69,90
+    assigned: euroToNum(assignedEl.textContent),  // 45,70
+    // el "pendiente" lo recalculamos siempre: tpv - assigned
+  };
 
-  // Contador de pendientes real (botones no deshabilitados)
+  let totalTPV      = initial.tpv;
+  let totalAssigned = initial.assigned;
+
+  // Contador de pendientes = botones activos
   let pending = document.querySelectorAll('.row .btn:not([disabled])').length;
   pendingCount.textContent = 'Pendientes: ' + pending;
 
   function refreshTotals() {
     assignedEl.textContent = numToEuro(totalAssigned);
-    totalPending = Math.max(0, totalTPV - totalAssigned);
+    const totalPending = Math.max(0, totalTPV - totalAssigned);
     pendingEl.textContent  = numToEuro(totalPending);
-    // rojo si hay pendiente, verde si todo listo
     pendingEl.style.color  = totalPending > 0 ? '#ef4444' : '#16a34a';
   }
+  refreshTotals();
 
+  // --- Marcar cobrado (solo aquí cambian los € asignado/pendiente)
   function attachButton(btn) {
     btn.addEventListener("click", () => {
-      // Cambia a cobrado
+      // Obtener el importe leyendo el texto de la línea: "Parcial #X • 18,50 €"
+      const idLine = btn.parentElement.querySelector('.id').textContent;
+      const m = idLine.match(/•\s*([\d.,]+)\s*€/);
+      const amountNum = m ? euroToNum(m[1] + ' €') : 0;
+
+      // Cambios visuales
       btn.disabled = true;
       btn.textContent = "Cobrado";
       btn.previousElementSibling.className = "badge paid";
       btn.previousElementSibling.textContent = "Cobrado";
+
       // Baja contador de pendientes
       pending = Math.max(0, pending - 1);
       pendingCount.textContent = 'Pendientes: ' + pending;
-      // (Totales NO cambian aquí: ya cambiaron al confirmar en Cliente)
+
+      // Actualiza totales (€): sube Asignado, baja Pendiente
+      totalAssigned = Math.min(totalTPV, totalAssigned + amountNum);
+      refreshTotals();
     });
   }
 
-  // Conectar botones existentes
+  // Conectar botones existentes al cargar
   document.querySelectorAll(".row .btn").forEach(attachButton);
 
+  // --- Añadir fila cuando el cliente confirma (NO tocar € aquí)
   function addPendingRow({code, amount, items, method}) {
     const badgeClass = method === 'Efectivo' ? 'cash' : 'cardm';
     const row = document.createElement('div');
@@ -139,23 +155,61 @@
       <button class="btn">Marcar cobrado</button>
     `;
     paymentsList.prepend(row);
-    // Sube contador de pendientes
+    // Sube SOLO el contador de pendientes (los € cambian al cobrar)
     pending++;
     pendingCount.textContent = 'Pendientes: ' + pending;
-    // Sube Asignado y baja Pendiente en totales
-    const add = euroToNum(amount);
-    totalAssigned = Math.min(totalTPV, totalAssigned + add);
-    refreshTotals();
-    // Activar botón
     attachButton(row.querySelector(".btn"));
   }
 
-  // Escucha al Cliente (misma tablet, otra pestaña)
+  // --- Escucha del Cliente (misma tablet, otra pestaña)
   const ch = new BroadcastChannel('pagoyo_demo');
   ch.onmessage = (e) => {
     const data = e.data || {};
     if (data.type === 'partial_confirmed') addPendingRow(data);
   };
+
+  // --- Reset demo: vuelve al estado inicial de ejemplo
+  resetBtn.addEventListener('click', () => {
+    // Restablecer totales
+    totalTPV = initial.tpv;
+    totalAssigned = initial.assigned;
+    refreshTotals();
+
+    // Reconstruir lista de pagos (2 pendientes + 1 cobrado como al inicio)
+    paymentsList.innerHTML = `
+      <div class="row">
+        <div class="left">
+          <span class="id">Parcial #A1 • 18,50 €</span>
+          <span class="items">1× Calamares · 2× Refresco</span>
+        </div>
+        <span class="badge cardm">Tarjeta</span>
+        <button class="btn">Marcar cobrado</button>
+      </div>
+
+      <div class="row">
+        <div class="left">
+          <span class="id">Parcial #B2 • 27,20 €</span>
+          <span class="items">1× Calamares · 1× Patatas · 2× Caña</span>
+        </div>
+        <span class="badge cash">Efectivo</span>
+        <button class="btn">Marcar cobrado</button>
+      </div>
+
+      <div class="row">
+        <div class="left">
+          <span class="id">Parcial #C3 • 24,20 €</span>
+          <span class="items">1× Calamares · 2× Refresco · 2× Tarta</span>
+        </div>
+        <span class="badge paid">Cobrado</span>
+        <button class="btn" disabled>Cobrado</button>
+      </div>
+    `;
+
+    // Recontar pendientes y reconectar botones
+    pending = document.querySelectorAll('.row .btn:not([disabled])').length;
+    pendingCount.textContent = 'Pendientes: ' + pending;
+    document.querySelectorAll(".row .btn").forEach(attachButton);
+  });
 </script>
-  </body>
+</body>
 </html>
