--- a/camarero/index.html
+++ b/camarero/index.html
@@ -7,7 +7,9 @@
   <style>
     :root{--teal:#0F766E;--orange:#E67E22;--bg:#F4F6F8;--ok:#16a34a;--warn:#ef4444}
     *{box-sizing:border-box} body{margin:0;font-family:system-ui,Arial,sans-serif;background:var(--bg);color:#111}
-    header{background:var(--teal);color:#fff;padding:14px;text-align:center;font-weight:700}
+    header{background:var(--teal);color:#fff;padding:12px}
+    header .bar{max-width:900px;margin:0 auto;display:flex;align-items:center;justify-content:space-between;gap:8px}
+    header .btn{background:#111;color:#fff;border:none;border-radius:10px;padding:8px 12px;cursor:pointer;font-weight:700}
     main{max-width:900px;margin:auto;padding:18px}
     .grid{display:grid;gap:12px}
     .totals{display:grid;grid-template-columns:repeat(3,1fr);gap:12px}
@@ -32,14 +34,22 @@
   </style>
 </head>
 <body>
- <header>
-  <div style="display:flex;align-items:center;justify-content:space-between;gap:8px;max-width:900px;margin:0 auto;">
-    <span>Mesa 6 — Panel Camarero</span>
-    <button id="resetBtn" class="btn" style="background:#111;border-radius:10px;padding:8px 12px">Reset demo</button>
-  </div>
-</header>
- </section>
- 
+  <header>
+    <div class="bar">
+      <span>Mesa 6 — Panel Camarero</span>
+      <button id="resetBtn" class="btn" style="background:#111">Reset demo</button>
+    </div>
+  </header>
+
+  <main class="grid">
+    <!-- TOTALES (con IDs para actualizarlos) -->
+    <section class="totals">
+      <div class="card"><div class="label">Total TPV</div><div id="tpvTotal" class="value">69,90 €</div></div>
+      <div class="card"><div class="label">Total asignado</div><div id="assignedTotal" class="value">45,70 €</div></div>
+      <div class="card"><div class="label">Pendiente</div><div id="pendingTotal" class="value" style="color:#ef4444">24,20 €</div></div>
+    </section>
+
+    <!-- LISTA PAGOS -->
     <section class="card">
       <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
         <h3 style="margin:0;color:#0F766E">Pagos</h3>
@@ -78,138 +88,101 @@
     <footer><p><a href="../">⬅ Volver al inicio</a></p></footer>
   </main>
 
-<script>
-  // --- Utils € ↔ número
-  const euroToNum = (s) =>
-    parseFloat(s.replace(/\./g,'').replace(',', '.').replace(/[^\d.]/g,'')) || 0;
-  const numToEuro = (n) => n.toFixed(2).replace('.', ',') + ' €';
+  <script>
+    // --- Utils € ↔ número
+    const euroToNum = (s) =>
+      parseFloat(s.replace(/\./g,'').replace(',', '.').replace(/[^\d.]/g,'')) || 0;
+    const numToEuro = (n) => n.toFixed(2).replace('.', ',') + ' €';
 
-  // --- Elementos
-  const paymentsList  = document.getElementById('paymentsList');
-  const pendingCount  = document.getElementById('pendingCount');
-  const tpvEl         = document.getElementById('tpvTotal');
-  const assignedEl    = document.getElementById('assignedTotal');
-  const pendingEl     = document.getElementById('pendingTotal');
-  const resetBtn      = document.getElementById('resetBtn');
+    // --- Elementos
+    const paymentsList  = document.getElementById('paymentsList');
+    const pendingCount  = document.getElementById('pendingCount');
+    const tpvEl         = document.getElementById('tpvTotal');
+    const assignedEl    = document.getElementById('assignedTotal');
+    const pendingEl     = document.getElementById('pendingTotal');
+    const resetBtn      = document.getElementById('resetBtn');
 
-  // --- Estados iniciales (leídos del DOM)
-  const initial = {
-    tpv:      euroToNum(tpvEl.textContent),       // 69,90
-    assigned: euroToNum(assignedEl.textContent),  // 45,70
-    // el "pendiente" lo recalculamos siempre: tpv - assigned
-  };
+    // --- Estados iniciales
+    const initial = {
+      tpv:      euroToNum(tpvEl.textContent),       // 69,90
+      assigned: euroToNum(assignedEl.textContent),  // 45,70
+      listHTML: document.getElementById('paymentsList').innerHTML
+    };
 
-  let totalTPV      = initial.tpv;
-  let totalAssigned = initial.assigned;
+    let totalTPV      = initial.tpv;
+    let totalAssigned = initial.assigned;
 
-  // Contador de pendientes = botones activos
-  let pending = document.querySelectorAll('.row .btn:not([disabled])').length;
-  pendingCount.textContent = 'Pendientes: ' + pending;
-
-  function refreshTotals() {
-    assignedEl.textContent = numToEuro(totalAssigned);
-    const totalPending = Math.max(0, totalTPV - totalAssigned);
-    pendingEl.textContent  = numToEuro(totalPending);
-    pendingEl.style.color  = totalPending > 0 ? '#ef4444' : '#16a34a';
-  }
-  refreshTotals();
-
-  // --- Marcar cobrado (solo aquí cambian los € asignado/pendiente)
-  function attachButton(btn) {
-    btn.addEventListener("click", () => {
-      // Obtener el importe leyendo el texto de la línea: "Parcial #X • 18,50 €"
-      const idLine = btn.parentElement.querySelector('.id').textContent;
-      const m = idLine.match(/•\s*([\d.,]+)\s*€/);
-      const amountNum = m ? euroToNum(m[1] + ' €') : 0;
-
-      // Cambios visuales
-      btn.disabled = true;
-      btn.textContent = "Cobrado";
-      btn.previousElementSibling.className = "badge paid";
-      btn.previousElementSibling.textContent = "Cobrado";
-
-      // Baja contador de pendientes
-      pending = Math.max(0, pending - 1);
-      pendingCount.textContent = 'Pendientes: ' + pending;
-
-      // Actualiza totales (€): sube Asignado, baja Pendiente
-      totalAssigned = Math.min(totalTPV, totalAssigned + amountNum);
-      refreshTotals();
-    });
-  }
-
-  // Conectar botones existentes al cargar
-  document.querySelectorAll(".row .btn").forEach(attachButton);
-
-  // --- Añadir fila cuando el cliente confirma (NO tocar € aquí)
-  function addPendingRow({code, amount, items, method}) {
-    const badgeClass = method === 'Efectivo' ? 'cash' : 'cardm';
-    const row = document.createElement('div');
-    row.className = 'row';
-    row.innerHTML = `
-      <div class="left">
-        <span class="id">Parcial #${code} • ${amount}</span>
-        <span class="items">${items}</span>
-      </div>
-      <span class="badge ${badgeClass}">${method}</span>
-      <button class="btn">Marcar cobrado</button>
-    `;
-    paymentsList.prepend(row);
-    // Sube SOLO el contador de pendientes (los € cambian al cobrar)
-    pending++;
+    function refreshTotals() {
+      assignedEl.textContent = numToEuro(totalAssigned);
+      const totalPending = Math.max(0, totalTPV - totalAssigned);
+      pendingEl.textContent  = numToEuro(totalPending);
+      pendingEl.style.color  = totalPending > 0 ? '#ef4444' : '#16a34a';
+    }
+    // Contador pendientes inicial
+    let pending = document.querySelectorAll('.row .btn:not([disabled])').length;
     pendingCount.textContent = 'Pendientes: ' + pending;
-    attachButton(row.querySelector(".btn"));
-  }
-
-  // --- Escucha del Cliente (misma tablet, otra pestaña)
-  const ch = new BroadcastChannel('pagoyo_demo');
-  ch.onmessage = (e) => {
-    const data = e.data || {};
-    if (data.type === 'partial_confirmed') addPendingRow(data);
-  };
-
-  // --- Reset demo: vuelve al estado inicial de ejemplo
-  resetBtn.addEventListener('click', () => {
-    // Restablecer totales
-    totalTPV = initial.tpv;
-    totalAssigned = initial.assigned;
     refreshTotals();
 
-    // Reconstruir lista de pagos (2 pendientes + 1 cobrado como al inicio)
-    paymentsList.innerHTML = `
-      <div class="row">
-        <div class="left">
-          <span class="id">Parcial #A1 • 18,50 €</span>
-          <span class="items">1× Calamares · 2× Refresco</span>
-        </div>
-        <span class="badge cardm">Tarjeta</span>
-        <button class="btn">Marcar cobrado</button>
-      </div>
+    // --- Marcar cobrado: aquí sí cambian €
+    function attachButton(btn) {
+      btn.addEventListener("click", () => {
+        const idLine = btn.parentElement.querySelector('.id').textContent;
+        const m = idLine.match(/•\s*([\d.,]+)\s*€/);
+        const amountNum = m ? euroToNum(m[1] + ' €') : 0;
 
-      <div class="row">
-        <div class="left">
-          <span class="id">Parcial #B2 • 27,20 €</span>
-          <span class="items">1× Calamares · 1× Patatas · 2× Caña</span>
-        </div>
-        <span class="badge cash">Efectivo</span>
-        <button class="btn">Marcar cobrado</button>
-      </div>
+        btn.disabled = true;
+        btn.textContent = "Cobrado";
+        btn.previousElementSibling.className = "badge paid";
+        btn.previousElementSibling.textContent = "Cobrado";
 
-      <div class="row">
-        <div class="left">
-          <span class="id">Parcial #C3 • 24,20 €</span>
-          <span class="items">1× Calamares · 2× Refresco · 2× Tarta</span>
-        </div>
-        <span class="badge paid">Cobrado</span>
-        <button class="btn" disabled>Cobrado</button>
-      </div>
-    `;
+        pending = Math.max(0, pending - 1);
+        pendingCount.textContent = 'Pendientes: ' + pending;
 
-    // Recontar pendientes y reconectar botones
-    pending = document.querySelectorAll('.row .btn:not([disabled])').length;
-    pendingCount.textContent = 'Pendientes: ' + pending;
+        totalAssigned = Math.min(totalTPV, totalAssigned + amountNum);
+        refreshTotals();
+      });
+    }
     document.querySelectorAll(".row .btn").forEach(attachButton);
-  });
-</script>
+
+    // --- Al confirmar cliente: solo añadir fila y subir contador (NO €)
+    function addPendingRow({code, amount, items, method}) {
+      const badgeClass = method === 'Efectivo' ? 'cash' : 'cardm';
+      const row = document.createElement('div');
+      row.className = 'row';
+      row.innerHTML = `
+        <div class="left">
+          <span class="id">Parcial #${code} • ${amount}</span>
+          <span class="items">${items}</span>
+        </div>
+        <span class="badge ${badgeClass}">${method}</span>
+        <button class="btn">Marcar cobrado</button>
+      `;
+      paymentsList.prepend(row);
+      pending++;
+      pendingCount.textContent = 'Pendientes: ' + pending;
+      attachButton(row.querySelector(".btn"));
+    }
+
+    // --- Canal entre pestañas
+    const ch = new BroadcastChannel('pagoyo_demo');
+    ch.onmessage = (e) => {
+      const data = e.data || {};
+      if (data.type === 'partial_confirmed') addPendingRow(data);
+    };
+
+    // --- Reset demo
+    resetBtn.addEventListener('click', () => {
+      totalTPV = initial.tpv;
+      totalAssigned = initial.assigned;
+      document.getElementById('paymentsList').innerHTML = initial.listHTML;
+
+      // Recontar y reenganchar
+      pending = document.querySelectorAll('.row .btn:not([disabled])').length;
+      pendingCount.textContent = 'Pendientes: ' + pending;
+      document.querySelectorAll(".row .btn").forEach(attachButton);
+      refreshTotals();
+    });
+  </script>
 </body>
 </html>
+
