--- a/cliente/index.html
+++ b/cliente/index.html
@@ -51,7 +51,7 @@
       <span>Total Mesa</span><span>69,90 €</span>
     </div>
 
-    <button id="confirmBtn" class="btn">Confirmar mi parte</button>
+    <button id="confirmBtn" class="btn">Elige que Pagar</button>
 
     <div id="doneBox" class="done">
       ✔ Tu parte está lista. Método: <span id="methodTxt" class="ref">—</span><br/>
