--- a/camarero/index.html
+++ b/camarero/index.html
@@ -48,11 +48,12 @@ padding:12px;border-radius:12px;text-align:center;font-weight:700;font-size:17px
   ✅ Mesa lista para cerrar
 </div>
 
-    <section class="totals">
-      <div class="card"><div class="label">Total TPV</div><div id="tpvTotal" class="value">69,90 €</div></div>
-      <div class="card"><div class="label">Total asignado</div><div id="assignedTotal" class="value">45,70 €</div></div>
-      <div class="card"><div class="label">Pendiente</div><div id="pendingTotal" class="value" style="color:#ef4444">24,20 €</div></div>
-    </section>
+ <section class="totals">
+  <div class="card"><div class="label">Total TPV</div><div id="tpvTotal" class="value">69,90 €</div></div>
+  <div class="card"><div class="label">Total cobrado</div><div id="assignedTotal" class="value">45,70 €</div></div>
+  <div class="card"><div class="label">Total pendiente cobrar</div><div id="pendingTotal" class="value" style="color:#ef4444">24,20 €</div></div>
+</section>
+   
 
     <!-- LISTA PAGOS -->
     <section class="card">
